7.http-routes.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: routes
spec:
  rules:
    - matches:
      - queryParams:
        - type: Exact
          name: side
          value: left
      backendRefs:
        - name: left
          port: 80
    - matches:
      - queryParams:
        - type: Exact
          name: side
          value: right
      backendRefs:
        - name: right
          port: 80
