8.routes-filter.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: routes
spec:
  rules:
    - filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /rewritten
    - matches:
      - queryParams:
        - type: Exact
          name: side
          value: left
      backendRefs:
        - name: left
          port: 80
    - matches:
      - queryParams:
        - type: Exact
          name: side
          value: right
      backendRefs:
        - name: right
          port: 80
